<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Umbreon</string>
    <string name="title_activity_main">Umbreon</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_blue">Send Blue</string>
    <string name="button_orange">Send Orange</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="post_url">IP</string>
    <string name="post_url_summ">IP address of Raspberry Pi</string>
    <string name="post_url_def">192.168.1.127</string>
    <string name="btn_coordinates">Get Temperature from GPS</string>
    <string name="title_activity_temperature">Temperature</string>
    <string name="temperature_text">Retrieving temperature...</string>
    <string name="your_temp_txt">Your temperature is</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="location_add">Add Location</string>
    <string name="title_activity_add_location">Add Location</string>
    <string name="city_hint">City name (e.g. Charlottesville)</string>
    <string name="state_text">State abbreviation (e.g. VA)</string>
    <string name="add_location_btn">Submit</string>
    <string name="preference_file_key">edu.virginia.cs.cs4720.umbreon.savedLocations</string>
    <string name="saved_locations_text">Saved Locations</string>

</resources>
